--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abiodunolaoluwa.github.io/dictionary-web-app/",
+  "homepage": "https://david-abhulimen.github.io/dictionary-web-app/",
   "name": "dictionary-web-app",
   "version": "0.1.0",
   "private": true,
